# lpython

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  a  a.py  a.s  appveyor.yml  azure-pipelines.yml  bench.sh  build.bat  build.sh  build0.bat  build0.sh  build0_win.xsh  build1.bat  build1.sh  build1_win.sh  build_java.sh  build_to_wasm.sh  c.py  ci-build.xsh  compile.py  dicttest.py  doconcurrentloop_01.py  environment.yml  environment_unix.yml  environment_win.yml  expr  expr2.py  fortran.g4  fortran_parser.py  (+20 more)
integration_tests/: CMakeLists.txt  a_01.mod  abs_01.f90  abs_02.f90  abs_03.f90  allocate_01.f90  allocate_02.f90  allocate_03.f90  array_01.py  array_01_decl.py  array_02.py  array_02_decl.py  array_03.py  array_03_decl.py  array_04.py  array_05.py  array_06.py  array_bound_1.f90  array_expr_01.py  array_expr_02.py  array_expr_03.py  array_expr_04.py  array_expr_05.py  array_expr_06.py  array_expr_07.py  array_expr_08.py  array_expr_09.py  array_expr_10.py  array_lbound_1.f90  array_size_01.py  array_size_02.py  arrays_01.f90  arrays_01_complex.f90  arrays_01_logical.f90  arrays_01_real.f90  arrays_01_size.f90  arrays_03.f90  arrays_03_func.f90  arrays_04.f90  arrays_04_func.f90  (+791 more)
integration_tests/interop/: mod1.f90  mod2.sh  run.sh  test_mod1.f90  wrap.py
integration_tests/lpconvexhull/: __init__.py  lpconvexhull_main.py  utils.py
integration_tests/lpdraw/: __init__.py  draw.py
integration_tests/lpydraw/: draw.py
integration_tests/nrp/: __init__.py  nr.py
integration_tests/test_import/: __init__.py  sys.py  test_import_1.py  test_import_2.py
lfortran/parser/: CMakeLists.txt  cparser.pyx  cwrapper.pxd  parser.py
old_tests/: CMakeLists.txt  if_03.f90  variables_01.f90
old_tests/interop/: cxxwrap.py  run.sh  test_fortran.f90  wrap2.py
src/lfortran/: CMakeLists.txt  asr_utils.cpp  asr_utils.h  asr_verify.cpp  asr_verify.h  assert.h  ast_serialization.cpp  ast_serialization.h  ast_to_cpp.cpp  ast_to_cpp.h  ast_to_cpp_hip.cpp  ast_to_cpp_hip.h  ast_to_json.cpp  ast_to_json.h  ast_to_openmp.cpp  ast_to_openmp.h  ast_to_src.cpp  ast_to_src.h  bigint.h  bwriter.h  casts.h  colors.h  config.h.in  containers.h  cwrapper.cpp  cwrapper.h  diagnostics.cpp  diagnostics.h  evaluator.cpp  evaluator.h  exception.h  fortran_evaluator.cpp  fortran_evaluator.h  fortran_kernel.cpp  fortran_kernel.h  mod_to_asr.cpp  mod_to_asr.h  modfile.cpp  modfile.h  pickle.cpp  (+11 more)
src/libasr/: ASR.asdl  CMakeLists.txt  alloc.h  asdl.py  asdl_cpp.py  asr_base_visitor.h  asr_builder.h  asr_deserialization_visitor.h  asr_expr_base_replacer_visitor.h  asr_expr_call_replacer_visitor.h  asr_expr_stmt_duplicator_visitor.h  asr_expr_type_visitor.h  asr_expr_value_visitor.h  asr_json_visitor.h  asr_lookup_name.h  asr_lookup_name_visitor.h  asr_pass_walk_visitor.h  asr_pickle_visitor.h  asr_scopes.cpp  asr_scopes.h  asr_serialization_visitor.h  asr_stmt_base_replacer_visitor.h  asr_tree_visitor.h  asr_utils.cpp  asr_utils.h  asr_verify.cpp  asr_verify.h  asr_walk_visitor.h  assert.h  bigint.h  bwriter.h  casting_utils.cpp  casting_utils.h  colors.h  config.h.in  containers.h  dat_convert.py  diagnostics.cpp  diagnostics.h  dwarf_convert.py  (+22 more)
src/lpython/: CMakeLists.txt  ast_serialization.cpp  ast_serialization.h  ast_to_json.cpp  ast_to_json.h  ast_to_openmp.cpp  ast_to_openmp.h  ast_to_src.cpp  ast_to_src.h  bigint.h  cwrapper.cpp  fortran_evaluator.cpp  fortran_evaluator.h  fortran_kernel.cpp  mod_to_asr.cpp  mod_to_asr.h  pickle.cpp  pickle.h  python_evaluator.cpp  python_evaluator.h  python_kernel.cpp  python_kernel.h  python_serialization.cpp  python_serialization.h  utils.cpp  utils.h
src/runtime/: CMakeLists.txt  a.py  b.py  cmath.py  cpython_bindings.py  decimal.py  lfort_intrinsics.c  lfortran_builtin.py  lfortran_intrinsic_array.f90  lfortran_intrinsic_iso_c_binding.f90  lfortran_intrinsic_kind.f90  lfortran_intrinsic_kind.mod  lfortran_intrinsic_math.f90  lfortran_intrinsic_math2.f90  lfortran_intrinsic_sin.f90  lfortran_intrinsic_sin_c.c  lfortran_intrinsics.c  lpython_builtin.py  lpython_intrinsic_numpy.py  lpython_parser.py  math.py  numpy.py  os.py  platform.py  random.py  stC1HJuh  statistics.py  string.py  sys.py  time.py  tmp.py  tmp2.py
tests/: CMakeLists.txt  Subroutine_Call1.f90  abort_01.f90  allocate1.f90  array1.f90  array2.f90  array2_derived.f90  array3.f90  array4.f90  array5.f90  array6.f90  array7.f90  array8.f90  array9.f90  arrayelements1.f90  arrays_01.f90  arrays_02.f90  assert.fpp  assert1.py  assign.f90  assign1.py  assign2.py  associate1.f90  attributes1.f90  block1.f90  block_data1.f90  bool1.py  boz1.f90  builtin1.f90  c_interop1.py  cast.py  close1.f90  coarrays_01.f90  coarrays_02.f90  comments1.f90  common1.f90  complex1.f90  complex1.py  complex2.f90  complex2.py  (+190 more)
tests/errors/: arrays_01.py  arrays_02.py  arrays_03.py  arrays_04.py  arrays_05.py  arrays_06.py  arrays_07.py  arrays_08.py  arrays_09.py  arrays_10.py  arrays_11.py  arrays_12.py  arrays_13.py  arrays_14.py  bindc_01.py  bindc_02.py  bindc_03.py  bindc_04.py  bindc_10e.py  bindc_10e_mod.py  class01.py  class_04.py  const_01.py  const_02.py  cpp1.f90  cpp2.f90  cpp3.f90  cpp4.f90  cpp5.f90  cpp5.h  cpp6.f90  cpp6.h  cpp7.f90  cptr_01.py  def_func_01.py  def_func_02.py  def_func_03.py  def_func_04.py  def_func_05.py  def_func_06.py  (+180 more)
tests/for_else/: break_in_if.py  nested_loop.py  no_break.py  with_break.py
tests/interop/: CMakeLists.txt  a.h  cxxwrap.py  generate_mod_files.sh  gfort_interop.f90  gfort_mod_parser.py  mod1-14.mod  mod1.f90  mod2.h  mod2.sh  run.sh  test_cpp.cpp  test_mod2.f90  wrap.py  wrap2.py  wrap_cpp.py
tests/parser/: async1.py  boolOp1.py  class_def1.py  class_def2.py  comprehension1.py  conditional_expr1.py  dictionary1.py  ellipsis1.py  ellipsis2.py  for1.py  for2.py  function_def1.py  function_def2.py  function_def3.py  global1.py  if1.py  if2.py  import1.py  lambda1.py  lambda2.py  match_stmt1.py  slice1.py  statements1.py  statements2.py  (+10 more)
(+4157 files in other folders)
